--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div class="title">Webpack 5 Test</div>
-    
+    <svg><use xlink:href="svg/spritesheet.svg#webpack"></svg>
 </body>
 </html>
