Adding all packages

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEBPACK 5 TEST</title>
+    <title>WEBPACK TEST</title>
 </head>
 <body>
-    <div class="title">Webpack 5 Test</div>
-    <svg><use xlink:href="svg/spritesheet.svg#webpack"></svg>
+    <div class="title">Webpack Test</div>
+    <!-- <svg><use xlink:href="svg/spritesheet.svg#webpack"></svg> -->
 </body>
 </html>
